---------------------------------------------
- 2021-06-30                                -
---------------------------------------------
.: WSW: BugFix - Profile image is not shown when store has no image in notification (WSW-124)
.: WSW: BugFix - Fix the items display in favorite (WSW-127)
.: WSW: Task - CLONE - Display New Products Category (WSW-126)

---------------------------------------------
- 2021-06-29                                -
---------------------------------------------
.: WSW: Task - CLONE - Create a product template which is based on the product template to create the item (WSW-125)

- v1.0.1094                                 -
---------------------------------------------
- 2021-06-20                                -
---------------------------------------------
.: WSW: Task - Update to use long polling to get notification (WSW-123)

---------------------------------------------
- 2021-06-14                                -
---------------------------------------------
.: WSW: Task - Notification of orders (WSW-123)

- v1.0.1093                                 -
---------------------------------------------
- 2021-06-06                                -
---------------------------------------------
.: WSW: Task - Add Prometheus to backend in order to monitor the health of website (WSM-357)

- v1.0.10923                                -
---------------------------------------------
- 2021-05-23                                -
---------------------------------------------
.: WSM: Task - Showing the number of the products which is going to be prepared in In Progress phase (WSM-352)

---------------------------------------------
- 2021-05-22                                -
---------------------------------------------
.: WSW: Task - Retrieve user details to place order + save inserted details (WSW-115)
.: WSW: Task - Link the order button in website to local shopping (WSW-116)

---------------------------------------------